# OpsLens

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
alembic/: env.py
compliance/: __init__.py  audit_middleware.py  data_retention.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AccessDenied.jsx  AgentActivityFeed.jsx  AuditTrail.jsx  CommandPanel.jsx  EnterpriseDashboard.jsx  ErrorBoundary.jsx  IncidentDetail.jsx  IncidentList.jsx  LoginPage.jsx  MetricsPanel.jsx  NotFound.jsx  ProtectedRoute.jsx  SearchPanel.jsx  SettingsPage.jsx  StatusBadge.jsx  Timeline.jsx  UserMenu.jsx  UsersManagement.jsx  (+1 more)
k8s/: celery-beat.yaml  celery-worker.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  opslens-deployment.yaml  postgres.yaml  redis.yaml  secrets.yaml
scripts/: seed_runbooks.py  setup_workspace.py  test_webhook.py
src/: config.py  errors.py  main.py
src/agents/: alert_grouping.py  commander.py  comms_agent.py  confidence.py  confidence_tracker.py  correlation_agent.py  llm_client.py  orchestrator.py  postmortem_agent.py  prompts.py  remediation_agent.py  triage_agent.py
src/api/: integrations_router.py  router.py  schemas.py  settings.py
src/auth/: __init__.py  jwt.py  middleware.py  oauth.py  password.py  rbac.py  router.py
src/cache/: __init__.py  redis_client.py  ws_pubsub.py
src/database/: __init__.py  engine.py  models.py
src/enterprise/: __init__.py  alert_rules.py  oncall.py  reporting.py  router.py  runbook_automation.py  sla.py
src/incidents/: manager.py  models.py  state_machine.py  timeline.py
src/integrations/: cloud_providers.py  github_integration.py  jira_integration.py  knowledge_base.py  outbound_webhooks.py  slack_integration.py  slack_notifier.py
src/notion_mcp/: client.py  templates.py  tools.py  workspace_setup.py
src/observability/: __init__.py  health.py  metrics.py  sentry_integration.py  tracing.py
src/search/: __init__.py  vector_store.py
src/security/: __init__.py  circuit_breaker.py  cors.py  encryption.py  rate_limiter.py
src/sync/: command_center.py  notion_watcher.py
src/tasks/: __init__.py  agent_tasks.py  celery_app.py  enterprise_tasks.py  webhook_tasks.py
src/webhooks/: normalizer.py  router.py  schemas.py  validator.py
tests/: conftest.py  test_api.py  test_auth.py  test_circuit_breaker.py  test_confidence.py  test_encryption.py  test_errors.py  test_models.py  test_state_machine.py  test_webhook_normalizer.py
(+9 files in other folders)
