[project]
name = "opslens"
version = "1.0.0"
description = "Autonomous Incident Response Orchestrator via Notion MCP"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Security
    "cryptography>=42.0.0",
    "slowapi>=0.1.9",

    # Cache & Queue
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",

    # Observability
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=1.40.0",

    # LLM
    "anthropic>=0.40.0",
    "google-genai",
    "slack-sdk",

    # Notion
    "notion-client>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "httpx",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pip-audit",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "compliance*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -p no:launch_testing -p no:ament_lint -p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_xmllint"
